<resources>
    <string name="app_name">BNotes</string>
    <string name="note">Note</string>
    <string name="title">Title</string>
    <string name="subject">Subject</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="todo">TODO</string>
    <string name="add_notes">Add Notes</string>
    <string name="new_note">New Note</string>
    <string name="_15">15</string>
    <string name="share">Share</string>
    <string name="style">Style</string>
    <string name="grid_style">Grid Style</string>
    <string name="clear">Clear</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_settings2">SettingsActivity2</string>
    <string name="the_checkbox">the checkbox</string>
</resources>