<?xml version="1.0" encoding="utf-8"?>


   <!-- <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        android:elevation="0dp"
        android:layout_marginTop="2dp"
        android:id="@+id/cardView1"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="2dp"
        app:cardBackgroundColor="#00FFFFFF"
        tools:targetApi="lollipop">  -->

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:background="@drawable/shape1"
            android:paddingLeft="6dp"
            android:paddingTop="12dp"
            android:paddingRight="12dp"
            android:paddingBottom="12dp"
            android:paddingStart="6dp"
            android:paddingEnd="12dp"


            android:layout_marginTop="0dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="5dp"



            >

            <TextView
                android:id="@+id/note_id_txt"
                android:background="@drawable/round_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/_15"
                android:textColor="#FFFFFF"
                android:textSize="10sp"
                android:textStyle="bold"
                android:visibility="visible"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/note_title_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView3"
        android:layout_alignBottom="@+id/imageView3"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@+id/imageView3"
        android:layout_toRightOf="@+id/imageView3"
        android:hint="@string/add_notes"
        android:singleLine="true"
        android:text="@string/note"
        android:textColor="@color/letters"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
                android:id="@+id/note_link_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/note_subject_txt"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="1dp"
                android:maxLines="11"
                android:singleLine="false"
                android:text="@string/note"
                android:textColor="@color/noteRowNote" />

            <TextView
                android:id="@+id/note_subject_txt"
                android:singleLine="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/note_title_txt"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/subject"
                android:textColor="@color/letters"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/note_id_txt"
                android:layout_toRightOf="@+id/note_id_txt"
                android:contentDescription="@string/todo"
                app:layout_constraintStart_toEndOf="@+id/note_id_txt"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/notes_icon" />
        </RelativeLayout>
   <!-- </androidx.cardview.widget.CardView>   -->